added basic functions to connect_layer, made Forward(), Backward() and UpdateGradient() public in cnn class

--- a/src/mlpack/methods/ann/layer/CMakeLists.txt
+++ b/src/mlpack/methods/ann/layer/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
   linear_layer.hpp
   conv_layer.hpp
   concat_layer.hpp
+  connect_layer.hpp
   subnet_layer.hpp
   inception_layer.hpp
   pooling_layer.hpp
